# vidmeta

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: example_gstreamer.py  modify_sample_video.py  remove_corner_points.py  remove_corners_and_frame_center_latlon.py
klv_test_videos/: cli.py  gstreamer_muxer.py  klv_converter.py  models.py  scenarios.py  video_builder.py  video_modifier.py
kwiver_testdata/: modify_cli.py  video_builder.py  video_modifier.py
openspec/: project.md
openspec/changes/add-metadata-analysis/: design.md  proposal.md  tasks.md
openspec/changes/add-metadata-analysis/specs/corner-points/: spec.md
openspec/changes/add-metadata-analysis/specs/metadata-analysis/: spec.md
openspec/changes/add-metadata-analysis/specs/metadata-export/: spec.md
tests/: test_pydantic_models.py  test_roundtrip.py
videos/: .gitignore  README.md
vidmeta/: cli.py  gstreamer_muxer.py  modify_cli.py  video_builder.py  video_modifier.py
