[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kwiver-testdata"
version = "0.1.0"
description = "Generate test videos and images with metadata for testing KWIVER"
authors = [{name = "Paul Hax"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "klvdata>=0.0.3",
    "opencv-python>=4.5.0",
    "numpy>=1.13.0,<2.0",
    "pydantic>=2.0.0",
    "PyGObject<3.51.0",  # Requires system packages: gir1.2-gstreamer-1.0, gir1.2-gst-plugins-base-1.0, gstreamer1.0-plugins-bad
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.0.250",
]

[project.scripts]
generate-klv-video = "kwiver_testdata.cli:main"
modify-klv-video = "kwiver_testdata.modify_cli:main"

[tool.setuptools]
packages = ["kwiver_testdata"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
