[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vidmeta"
version = "0.1.0"
description = "Generate test videos with embedded geospatial and sensor metadata"
authors = [{name = "Paul Hax"}]
license = "MIT"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.10"
keywords = ["video", "metadata", "geospatial", "klv", "misb", "testing", "uav"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Video",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "klvdata>=0.0.3",
    "pydantic>=2.0.0",
]

[project.urls]
Repository = "https://github.com/PaulHax/vidmeta"

[project.optional-dependencies]
mux = [
    "numpy>=1.20.0",
    "opencv-python>=4.5.0",
    "PyGObject>=3.44.0,<3.51.0",  # <3.51 for girepository-1.0; requires gir1.2-gstreamer-1.0, gstreamer1.0-plugins-bad
]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.0.250",
]

[project.scripts]
vidmeta-generate = "vidmeta.cli:main"
vidmeta-modify = "vidmeta.modify_cli:main"

[tool.setuptools]
packages = ["vidmeta"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
